@@ -1,3 +1,7 @@
+2009-10-29 Ian Rutt
+ * libglide/glide_thckADI.F90: More refactoring of ADI scheme
+ * Regtest fails at present
+
 2009-10-28 Magnus Hagdorn
  * libglide/glide.F90: initialise temperature code with vertical grid
  * libglide/glide_setup.F90: initialise vertical grid
